# spotify-dl-webui

./: .gitignore  LICENSE  README.md  app.py  pyproject.toml  requirements.txt
spotify_dl/: youtube.py
static/: input.css  output.css
templates/: index.html  processing.html  thankyou.html
